[gd_scene load_steps=4 format=3 uid="uid://bbvituhk8ine3"]

[ext_resource type="Script" uid="uid://cyfyvtcdjamr3" path="res://gui/chart.gd" id="1_e8kkf"]
[ext_resource type="Script" uid="uid://4ivesgwjdeu5" path="res://gui/result_chart_item.gd" id="1_wuhb7"]
[ext_resource type="Texture2D" uid="uid://cohqeh37sychv" path="res://resources/icons/white/delete.png" id="2_wuhb7"]

[node name="ResultChartItem" type="PanelContainer"]
offset_right = 112.0
offset_bottom = 79.0
theme_type_variation = &"ResultChartItem"
script = ExtResource("1_wuhb7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Container" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Chart" type="Control" parent="VBoxContainer/Container"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 40)
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("1_e8kkf")
metadata/_custom_type_script = "uid://cyfyvtcdjamr3"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Container"]
layout_mode = 2

[node name="DeleteButton" type="Button" parent="VBoxContainer/Container/VBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
icon = ExtResource("2_wuhb7")
icon_alignment = 1
expand_icon = true

[node name="ChartLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"ResultItemTitle"
text = "boo"
horizontal_alignment = 1

[connection signal="pressed" from="VBoxContainer/Container/VBoxContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
